src/objects/Study_Team_Members__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Weekly_Hours__c</fullName>
        <label>Actual Weekly Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Weekly_Hours__c</fullName>
        <label>Forecast Weekly Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <referenceTo>DRDP_Member_Roles__c</referenceTo>
        <relationshipLabel>Study Team Members</relationshipLabel>
        <relationshipName>Study_Team_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <label>Study</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Study Team Members</relationshipLabel>
        <relationshipName>Study_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Study_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Study Team Members</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>End_Date__c</columns>
        <columns>Hours__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Study__c</columns>
        <columns>Team_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TEAM-{0000}</displayFormat>
        <label>Study Team Members ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_should_be_greater_than_start_Da</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date should be greater than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Member_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Team_Member__c )</errorConditionFormula>
        <errorDisplayField>Team_Member__c</errorDisplayField>
        <errorMessage>Team Member is Mandatory for a Study Team Member</errorMessage>
    </validationRules>
</CustomObject>